--- a/src/05-member/style/ForgotPass.scss
+++ b/src/05-member/style/ForgotPass.scss
@@ -18,7 +18,7 @@ $s-main-b: #113f75;
   background: $s-bgcYellow center center no-repeat;
   background-size: cover;
 
-  .container {
+  .s-fp-container {
     position: relative;
     width: 400px;
     height: 400px;
@@ -27,7 +27,7 @@ $s-main-b: #113f75;
 
     // border: 1px solid orange;
 
-    .forgotBx {
+    .s-fp-forgotBx {
       position: absolute;
       top: 0;
       left: 0;
@@ -44,21 +44,21 @@ $s-main-b: #113f75;
 
       // border: 1px solid green;
 
-      form {
+      .s-fp-form {
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
-        h2 {
+        .s-fp-h2 {
           font-size: 30px;
           color: $s-font-main;
           margin-bottom: 10px;
           /* padding: 10px; */
         }
 
-        h3 {
+        .s-fp-h3 {
           font-size: 16px;
           color: #5e5e5e;
           margin-bottom: 20px;
