--- a/src/00-homepage/styles/ForumPost.scss
+++ b/src/00-homepage/styles/ForumPost.scss
@@ -40,6 +40,14 @@ $border-radius-button: 8px;
 
             }
         }
+
+        .y-forum-title {
+
+                p {
+                    
+                }
+            }
+        
     }
     
     .y-forum-text {
@@ -60,30 +68,56 @@ $border-radius-button: 8px;
     .y-forum-card-container {
 
         .y-forum-top {
-
+            margin-bottom: 25px;
             .y-forum-author {
                 display: flex;
-
+                margin-bottom: 8px;
                 .y-author-name {
                     font-size: 16px;
+                    letter-spacing: 2px;
                 }
                 .y-author-account {
                     font-size: 14px;
+                    letter-spacing: 2px;
+                }
+            }
+
+            .y-forum-title {
+
+                p {
+                    font-size: 18px;
+                    font-weight: bold;
+                    color: $main-blue;
                 }
             }
         }
         
         .y-forum-text {
+            width: 100%;
+            // height: 100%;
+            max-height: 200px;
+            overflow: hidden;
+            // background-color: $bgc-yellow;
+            margin-bottom: 25px;
+            
             p {
                 letter-spacing: 5px;
                 line-height: 1.4;
+                font-size: 16px;
+
+                // overflow: hidden;
+                // text-overflow: ellipsis;
+                // white-space: nowrap;
             }
         }
 
         .y-forum-pic {
-
+            width: 100%;
+            // border: $border-sm;
+            // border-radius: $border-radius-card;
             img {
                 width: 100%;
+                
             }
         }
     }
