--- a/src/03-shop/styles/03-shop-home.scss
+++ b/src/03-shop/styles/03-shop-home.scss
@@ -127,7 +127,7 @@ $title-text:rgb(190, 174, 146);
       cursor: pointer;
 
       input {
-        display: none;
+        // display: none;
         background-color: transparent;
       }
       input:checked + span {
