--- a/src/05-member/style/ForgotPass.scss
+++ b/src/05-member/style/ForgotPass.scss
@@ -1,14 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 $s-bgcYellow: url(../../../public/05-member/bgc_yellow.jpg);
 $s-font-main: #2b325c;
 $s-main-b: #113f75;
-
-// * {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-//   font-family: 'Open Sans', sans-serif;
-// }
 
 .s-body-forgotpass {
   display: flex;
@@ -55,6 +47,7 @@ $s-main-b: #113f75;
           font-size: 30px;
           color: $s-font-main;
           margin-bottom: 10px;
+          font-weight: 600;
           /* padding: 10px; */
         }
 
@@ -66,32 +59,27 @@ $s-main-b: #113f75;
           /* padding: 10px; */
         }
 
-        input {
+        .s-fp-input {
           width: 100%;
-          // margin-bottom: 20px;
+          margin-bottom: 5px;
           padding: 10px;
           outline: none;
           font-size: 16px;
           border: 1px solid #333;
         }
 
-        input[type='submit'] {
-          /* border: none; */
-          /* color: #fff; */
+        .s-fp-forgotSubmit {
+          background: $s-main-b;
+          box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+          border: none;
+          color: #fff;
           font-weight: 600;
           width: 100%;
           cursor: pointer;
           border-radius: 8px;
         }
 
-        .forgotSubmit {
-          background: $s-main-b;
-          box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
-          border: none;
-          color: #fff;
-        }
-
-        .errorMg {
+        .s-fp-errorMg {
           // border: 1px solid green;
           font-size: 14px;
           margin-bottom: 15px;
@@ -102,7 +90,7 @@ $s-main-b: #113f75;
           height: 15px;
         }
 
-        label {
+        .s-fp-label {
           font-size: 15px;
           width: 100%;
           margin-bottom: 5px;
