--- a/src/05-member/style/UserProfileTmp.scss
+++ b/src/05-member/style/UserProfileTmp.scss
@@ -8,14 +8,14 @@ $s-padding-top: 100px;
   overflow-x: hidden;
   // background-color: red;
 
-  .container {
+  .s-container {
     height: calc(100vh - $s-footer-height);
     display: flex;
     position: relative;
 
     // border: 1px solid red;
 
-    .navigation {
+    .s-upt-navigation {
       // position: fixed;
       width: 650px;
       height: 100%;
@@ -26,29 +26,30 @@ $s-padding-top: 100px;
 
       // border: 1px solid red;
 
-      ul {
+      .s-upt-ul {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
+        // border: 1px solid green;
 
-        li {
+        .s-upt-li {
           width: 228px;
           list-style: none;
 
           // border: 1px solid black;
 
-          h4 {
+          .s-upt-h4 {
             margin: 10px 0;
           }
 
-          a {
+          .s-upt-item {
             display: block;
             width: 100%;
             display: flex;
             text-decoration: none;
             color: #534e48;
 
-            .icon {
+            .s-upt-icon {
               display: block;
               min-width: 50px;
               height: 60px;
@@ -59,7 +60,7 @@ $s-padding-top: 100px;
 
               // border: 1px solid green;
 
-              img {
+              .s-upt-img {
                 // width: px;
                 width: 60%;
                 height: 60%;
@@ -69,7 +70,7 @@ $s-padding-top: 100px;
               }
             }
 
-            .title {
+            .s-upt-title {
               display: block;
               padding: 0 10px;
               height: 60px;
@@ -83,7 +84,7 @@ $s-padding-top: 100px;
             }
           }
 
-          a:hover {
+          .s-upt-item:hover {
             background: #fff6e2;
             // border-radius: 8px;
           }
@@ -92,7 +93,7 @@ $s-padding-top: 100px;
     }
 
     @media (max-width: 991px) {
-      .navigation {
+      .s-upt-navigation {
         position: fixed;
         width: 60px;
         height: 100%;
@@ -103,18 +104,18 @@ $s-padding-top: 100px;
 
         // border: 1px solid red;
 
-        ul {
+        .s-upt-ul {
           width: 100%;
           list-style: none;
 
-          li {
+          .s-upt-li {
             transform: translateX(172px);
             // width: 100%;
             // width: 45%;
 
             // border: 1px solid red;
 
-            h4 {
+            .s-upt-h4 {
               // margin: 10px 0;
               display: none;
             }
@@ -122,18 +123,18 @@ $s-padding-top: 100px;
         }
       }
 
-      .navigation.active {
+      .s-upt-navigation.s-upt-active {
         left: 0px;
         width: 100%;
 
-        li {
+        .s-upt-li {
           transform: translateX(2px);
           // width: 100%;
           // width: 45%;
 
           // border: 1px solid red;
 
-          h4 {
+          .s-upt-h4 {
             // margin: 10px 0;
             display: block;
           }
@@ -142,7 +143,7 @@ $s-padding-top: 100px;
     }
 
     @media (max-width: 991px) {
-      .toggle {
+      .s-upt-toggle {
         position: fixed;
         bottom: $s-footer-height;
         // top: 0;
@@ -155,7 +156,7 @@ $s-padding-top: 100px;
         z-index: 3;
       }
 
-      .toggle:before {
+      .s-upt-toggle:before {
         content: '\f054';
         font-family: 'FontAwesome';
         position: absolute;
@@ -167,20 +168,20 @@ $s-padding-top: 100px;
         color: #fff;
       }
 
-      .toggle.active {
+      .s-upt-toggle.s-upt-active {
         background: #fff6e2;
         transform: scale(1);
         transition: 0.5s;
       }
 
-      .toggle.active:before {
+      .s-upt-toggle.s-upt-active:before {
         content: '\f00d';
         font-family: 'FontAwesome';
         color: #330748;
       }
     }
 
-    .main-content {
+    .s-main-content {
       margin-left: 25px;
       margin-right: 470px;
       width: 40%;
@@ -194,7 +195,7 @@ $s-padding-top: 100px;
     }
 
     @media (max-width: 991px) {
-      .main-content {
+      .s-main-content {
         transform: translateX(-690px);
         margin-left: 10px;
         width: 80%;
@@ -202,7 +203,7 @@ $s-padding-top: 100px;
     }
   }
 
-  .footer {
+  .s-footer {
     height: $s-footer-height;
     bottom: 0;
     position: fixed;
