--- a/src/05-member/style/profile-pages/UpdateInfo.scss
+++ b/src/05-member/style/profile-pages/UpdateInfo.scss
@@ -227,6 +227,8 @@
         font-weight: 900;
         text-align: center;
         cursor: pointer;
+
+        // border: 1px solid red;
       }
     }
 
@@ -251,7 +253,7 @@
     height: 100%;
 
     .s-ui-card {
-      height: 800px;
+      height: 670px;
     }
   }
 }
