--- a/src/05-member/style/profile-pages/UserProfile.scss
+++ b/src/05-member/style/profile-pages/UserProfile.scss
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  border: 1px solid black;
+  // border: 1px solid black;
 
   .s-up-title {
     font-size: 30px;
@@ -129,7 +129,7 @@
             color: #fff;
             font-weight: 900;
             text-decoration: none;
-            text-align: center;
+            // text-align: center;
             cursor: pointer;
             padding-top: 10px;
 
@@ -163,6 +163,7 @@
     color: #fff;
     font-weight: 900;
     text-align: center;
+    text-decoration: none;
     cursor: pointer;
   }
 }
